--- a/public/stylesheets/timeline.css
+++ b/public/stylesheets/timeline.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700");
-@import url("https://static.fontawesome.com/css/fontawesome-app.css");
-@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
+@import url("/stylesheets/fontawesome-app.css");
+@import url("/stylesheets/font-awesome.min.css");
 * {
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
   box-sizing: border-box;
