--- a/public/stylesheets/timeline.css
+++ b/public/stylesheets/timeline.css
@@ -101,7 +101,7 @@
   padding: 20px;
   /*background: #00AEEF;*/
   border: 2px solid #00AEEF;
-  color: #fff;
+  color: #000;
   border-radius: 5px;
   line-height: 20px;
   width: auto;
