--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,8 +8,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     media="screen,projection">
-  <link rel="stylesheet" type="text/css" href="/stylesheets/timeline.css" />
-  <link rel="stylesheet" type="text/css" href="/stylesheets/index.css" />
+  <link rel="stylesheet" type="text/css" href="stylesheets/timeline.css" />
+  <link rel="stylesheet" type="text/css" href="stylesheets/index.css" />
   <style>
     label.active {
       color: #007bff !important;
@@ -38,16 +38,6 @@
   <!-- Content Input Section -->
   <section id="input_section" class="fullscreen">
     <div class="container">
-      <!-- <div class="row">
-        <div class="col-12">
-          &nbsp;
-          <form>
-            <label for="">Story Input Section</label>
-            <textarea class="form-control" id="" style="min-height: 50vh;"
-              placeholder="Paste your story here!..."></textarea>
-          </form>
-        </div>
-      </div> -->
       <div class="row">
         <form class="col s12">
           <div class="row">
@@ -60,13 +50,13 @@
       </div>
       <div class="row">
         <div class="col s12 m6 l4 offset-l2 center-align">
-          <!-- <button type="button" class=""></button> -->
+          &nbsp;<br/>
           <button class="btn waves-effect waves-light blue white-text" id="fetch_input_story">Fetch Sample
             <i class="material-icons right">content_paste</i>
           </button>
         </div>
         <div class="col s12 m6 l4 center-align">
-          <!-- <button type="button" class="btn">Send</button> -->
+          &nbsp;<br/>
           <button class="btn waves-effect waves-light blue white-text" id="submit_input_story">&nbsp;&nbsp;&nbsp;Submit
             <i class="material-icons right">send</i>&nbsp;&nbsp;&nbsp;
           </button>
@@ -367,7 +357,7 @@
       // Code to fetch a sample story on Clicking Fetch Button
       $("#fetch_input_story").click(function () {
         $.ajax({
-          url: "/story/story01.txt",
+          url: "story/story01.txt",
           success: function (result) {
             $("#input_story").html(result);
             M.textareaAutoResize($('#input_story'));
