Front End Updated

--- a/public/stylesheets/timeline - Copy.css
+++ b/public/stylesheets/timeline - Copy.css
@@ -6,11 +6,6 @@
   box-sizing: border-box;
 }
 
-.completed-content{
-  background: transparent !important;
-  color: black !important;
-}
-
 .paragraph__content-container {
   max-width: 75em;
   margin: 0 auto;
@@ -104,9 +99,9 @@
   margin: 20px 0 60px 60px;
   position: relative;
   padding: 20px;
-  background: #00AEEF;/*transparent;*/
+  /*background: #00AEEF;*/
   border: 2px solid #00AEEF;
-  color: #ffffff;
+  color: #000;
   border-radius: 5px;
   line-height: 20px;
   width: auto;
